[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game/Game.gd" type="Script" id=1]
[ext_resource path="res://Meteor/Meteor.tscn" type="PackedScene" id=2]
[ext_resource path="res://SpaceShip/SpaceShip.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/OreDetector.gd" type="Script" id=4]
[ext_resource path="res://Supplier/Supplier.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="SegmentShape2D" id=5]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Meteor" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -320 )

[node name="SpaceShip" parent="." groups=["FuelLabel"] instance=ExtResource( 3 )]
position = Vector2( 0, 448 )

[node name="GameArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea"]
shape = SubResource( 4 )

[node name="OreDetector" type="Area2D" parent="."]
position = Vector2( 0, -328 )
collision_layer = 128
collision_mask = 32
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OreDetector"]
rotation = 3.14159
shape = SubResource( 5 )

[node name="Line2D" type="Line2D" parent="OreDetector"]
width = 16.0
default_color = Color( 0.686275, 1, 0.713726, 0.392157 )

[node name="SupplierFuel" parent="." instance=ExtResource( 5 )]
rotation = -0.164502
product_item = 2
product_num = 15

[node name="SupplierBullet" parent="." instance=ExtResource( 5 )]
product_num = 7

[connection signal="shot_multi" from="SpaceShip" to="." method="_on_SpaceShip_shot_multi"]
[connection signal="body_exited" from="GameArea" to="." method="_on_GameArea_body_exited"]
[connection signal="body_entered" from="OreDetector" to="." method="_on_OreDetector_body_entered"]
[connection signal="body_exited" from="OreDetector" to="." method="_on_OreDetector_body_exited"]
